# homelab-k8s

./: .dockerignore  .gitignore  .sops.yaml  .trivyignore  AGENTS.md  README.md  Taskfile.yaml  aqua.yaml  renovate.json5  trivy-secret.yaml  trivy.yaml
.cursor/rules/: specify-rules.mdc
.github/workflows/: build-radigo-image.yaml  build-yt-dlp-rajiko-image.yaml  k8s-lint-security.yaml  test-arc-runner.yaml
.specify/memory/: constitution.md
docs/: audiobookshelf.md  backup-alerting.md  cloudnative-pg.md  flux-bootstrap.md  grafana-alloy.md  home-assistant-matter-investigation.md  k8s-lint-security.md  kube-state-metrics.md  lessons-learned.md  longhorn.md  radigo.md  renovate.md  tailscale-operator.md  talos-bootstrap.md  talos-operations.md  trilium.md
docs/incidents/: 2026-05-04-talos-1.13-cilium-1.19-tailscale.md
grafana-cloud/: README.md  alertmanager.yaml
images/radigo/: Dockerfile
images/yt-dlp-rajiko/: Dockerfile  pyproject.toml
infra/talos/: talconfig.yaml  talenv.sops.yaml  talsecret.sops.yaml  talsecret.yaml
k8s/apps/: kustomization.yaml
k8s/configs/: kustomization.yaml
k8s/flux/: apps-kustomization.yaml  configs-kustomization.yaml  infra-crds-kustomization.yaml  infrastructure-kustomization.yaml  kustomization.yaml  private-apps-kustomization.yaml  private-gitrepository.yaml  tailscale-config-kustomization.yaml
k8s/infrastructure/: kustomization.yaml
specs/001-cilium-flux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-longhorn-r2-backup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+293 files in other folders)
