[project]
name = "radiko-recorder"
version = "1.0.0"
description = "Radiko recorder using yt-dlp with rajiko plugin"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2026.1.29",
    "yt-dlp-rajiko>=1.11",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
